<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".UserProcessActivity">
<item
    android:id="@+id/note_traffic"
    android:orderInCategory="100"
    android:title="@string/note_traffic"
    app:showAsAction="never"/>

<item
    android:id="@+id/note_text"
    android:orderInCategory="100"
    android:title="@string/note_text"
    app:showAsAction="never"/>

<item
    android:id="@+id/note_list"
    android:orderInCategory="100"
    android:title="@string/note_list"
    app:showAsAction="never"/>

<item
    android:id="@+id/note_foto"
    android:orderInCategory="100"
    android:title="@string/note_foto"
    app:showAsAction="never"/>

<item
    android:id="@+id/note_audio"
    android:orderInCategory="100"
    android:title="@string/note_audio"
    app:showAsAction="never"/>

<item
    android:id="@+id/note_geo"
    android:orderInCategory="100"
    android:title="@string/note_geo"
    app:showAsAction="never"/>
</menu>