<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UserInfoActivity">
    <item
        android:id="@+id/tasks_button_start"
        android:orderInCategory="100"
        android:title="@string/note_tasks"
        app:showAsAction="never" />
    <item
        android:id="@+id/tasks_button_exit"
        android:orderInCategory="100"
        android:title="@string/note_calendar"
        app:showAsAction="never" />

    <item
        android:id="@+id/tasks_button_done"
        android:orderInCategory="100"
        android:title="@string/note_contacts"
        app:showAsAction="never" />

    <item
        android:id="@+id/tasks_button_assessment"
        android:orderInCategory="100"
        android:title="@string/note_products"
        app:showAsAction="never" />
    <item
        android:id="@+id/tasks_button_add_tasks"
        android:orderInCategory="100"
        android:title="@string/note_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/tasks_button_change"
        android:orderInCategory="100"
        android:title="@string/note_info"
        app:showAsAction="never" />
</menu>