<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextView
    android:id="@+id/textCurrentDate"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/textcurrentdate"
    android:textColor="@color/colorBlаck"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<TextView
    android:id="@+id/textView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/list_of_active_user_sessions"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textCurrentDate" />

<TextView
    android:id="@+id/textView2"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:text="@string/list_of_posts_in_which_you_are_involved_as_a_user"
    android:textSize="18sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.494"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/listOfActiveUserSessions" />

<ListView
    android:id="@+id/listOfActiveUserSessions"
    android:layout_width="409dp"
    android:layout_height="281dp"
    android:layout_marginTop="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="1.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>